@@ -25,8 +25,7 @@
  * @test
  * @bug 8231827
  * @summary Testing pattern matching against the null constant
- * @compile --enable-preview -source ${jdk.version} NullsInPatterns.java
- * @run main/othervm --enable-preview NullsInPatterns
+ * @compile/fail/ref=NullsInPatterns.out -XDrawDiagnostics NullsInPatterns.java
  */
 import java.util.List;
 
